cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__hierarchy__test__set-2.snap
---
source: cedar-language-server/src/documentation/hierarchy.rs
expression: docs.to_documentation_string(None)
---
# Set Type

```cedarschema
Set<{ foo: bool }>
```

A collection type that contains elements of type `{ foo: bool }`.
