cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__hierarchy__test__set.snap
---
source: cedar-language-server/src/documentation/hierarchy.rs
expression: docs.to_documentation_string(None)
---
# Set Type

```cedarschema
Set<string>
```

A collection type that contains elements of type `string`.
